# nft_collection

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/src/: App.js
